--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react_love_heart_effect",
+  "name": "react-love-heart-effect",
   "private": false,
   "description": "React Love Heart Effect or 爱心❤️点赞效果",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/LoveHeartEffect.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/LoveHeartEffect.d.ts"
     },
     "./styles": "./dist/style.css"
   },
@@ -30,8 +30,7 @@
   "dependencies": {
     "@types/node": "^22.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-plugin-dts": "^4.3.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -44,6 +43,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0"
   }
 }
