--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/LoveHeartEffect.d.ts",
+  "keywords": [
+    "react",
+    "heart",
+    "love",
+    "effect",
+    "twitter like",
+    "heart effect"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
